corrected syntax error in visualizer due to change in commandresult constructor